# minecraft_clone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DebugDrawer.h  README.md  main.cpp  toolchain.cmake
.github/workflows/: build.yml
assets/: block_types.txt
assets/UI/: invader.rcss  main.css  main.html  main.rml  main2.rml  main_menu.css  main_menu.html  pause_menu.html  rml.rcss  styles.css  window.rml
cmake/: compiler_flags.cmake  dependencies.cmake  options.cmake
engine/: CMakeLists.txt
engine/core/: core.cppm  events.cppm  logger.cppm  types.cppm
engine/ecs/: ecs.cppm  entity.cppm
engine/math/: aabb.cppm  animation.hpp  math.cppm  transitions.cpp  types.cppm
engine/platform/: input_action_map.cppm  input_state.cppm  platform.cppm  window.cpp  window.cppm
engine/renderer/: debug_drawer.cpp  debug_drawer.cppm  renderer.cppm
engine/renderer/gl/: backend.cpp  backend.cppm  framebuffer.cppm  framebuffer_manager.cppm  gpu_buffer.cppm  index_buffer.cppm  shader.cppm  ssbo.cppm  state_cache.cppm  texture.cppm  uniform_buffer.cppm  vertex_buffer.cppm
engine/renderer/ui/: system_interface_glfw.cpp  system_interface_glfw.hpp  ui.cpp  ui.cppm
engine/runtime/: frame_context.cppm  runtime.cpp  runtime.cppm
engine/test_app/: CMakeLists.txt  test.cpp
engine/tests/: CMakeLists.txt  tests.cpp
game/: CMakeLists.txt  debug.cppm  tracy_overrides.cpp
game/app/: app.cpp  app.cppm  game_factories.cppm  game_state.cppm  player.cppm
game/app/ecs/: components.cppm  systems.cpp  systems.cppm
game/chunk/: chunk.cppm  chunk_manager.cpp  chunk_manager.cppm  chunk_renderer.cppm  noise.cppm
game/core/: core.cpp  core.cppm  timer.cpp  timer.cppm
game/shaders/: chunk_vert.glsl  crosshair_frag.glsl  crosshair_vert.glsl  fb_debug_frag.glsl  indirect_buffer_fill.comp  main.vs  merged_offsets.comp  player_vert.glsl  ui_frag.glsl  voxel_buffer.comp  water_vert.glsl  write_faces.comp
include/: AABB.h  AABBDebugDrawer.h  Animation.hpp  Application.h  Camera.h  Camera.hpp  CameraController.hpp  DebugDrawer.h  InputManager.h  InputManager.hpp  Logger.h  Shader.h  Texture.h  Timer.h  defines.h  logger.hpp  pch_wrapper.hpp
include/Chunk/: Chunk.h  ChunkManager.h
include/Player/: Cube.h  Player.h
include/Player/player_modes/: CreativeMode.h  PlayerMode.h  SpectatorMode.h  SurvivalMode.h
include/Player/player_states/: FlyingState.h  PlayerState.h  RunningState.h  SwimmingState.h  WalkingState.h
include/UI/: SystemInterfaceGLFW.h  UI.h
include/chunk/: Chunk.h  chunk.hpp  chunk_manager.hpp
include/core/: Camera.hpp  CameraController.hpp  Transitions.hpp  aabb.hpp  animation.hpp  application.hpp  camera.hpp  camera_controller.hpp  defines.h  defines.hpp  input_manager.hpp  logger.hpp  platform.hpp  raycast.hpp  timer.hpp  transitions.hpp  window_context.hpp
include/game/: Player.h  player.hpp
include/game/ecs/: ECS.hpp  component_manager.hpp  component_storage.hpp  ecs.hpp  entity.hpp  entity_manager.hpp
include/game/ecs/components/: active_camera.hpp  camera.hpp  camera_controller.hpp  collider.hpp  debug_camera.hpp  debug_camera_controller.hpp  frustum_volume.hpp  health.hpp  input.hpp  mouse_input.hpp  movement_config.hpp  movement_intent.hpp  player_mode.hpp  player_state.hpp  position.hpp  render_target.hpp  temporal_camera.hpp  transform.hpp  velocity.hpp
include/game/ecs/systems/: camera_controller_system.hpp  camera_system.hpp  chunk_renderer_system.hpp  debug_camera_system.hpp  frustum_volume_system.hpp  input_system.hpp  movement_intent_system.hpp  movement_physics_system.hpp  physics_system.hpp  player_state_system.hpp  (+1 more)
include/graphics/: DebugDrawer.h  cube.hpp  debug_drawer.hpp  shader.hpp  texture.hpp
include/graphics/renderer/: framebuffer.hpp  framebuffer_manager.hpp  index_buffer.hpp  shader_storage_buffer.hpp  vertex_buffer.hpp
include/ui/: SystemInterfaceGLFW.h  UI.h  system_interface_glfw.hpp  ui.hpp
shaders/: chunk_vert.glsl  chunkfrag.glsl  chunkvert.glsl  crosshairFrag.glsl  debug_frag.glsl  debug_vert.glsl  frag.glsl  player_frag.glsl  player_vert.glsl  uiFrag.glsl  uiVert.glsl  ui_frag.glsl  vert.glsl  water_frag.glsl
src/: AABBDebugDrawer.cpp  Animation.cpp  Application.cpp  Camera.cpp  CameraController.cpp  DebugDrawer.cpp  InputManager.cpp  Texture.cpp  Timer.cpp  Transitions.cpp  defines.cpp  main.cpp
src/Chunk/: Chunk.cpp  ChunkManager.cpp
src/Player/: Cube.cpp  Player.cpp
src/Player/player_states/: FlyingState.cpp  RunningState.cpp  SwimmingState.cpp  WalkingState.cpp
src/UI/: SystemInterfaceGLFW.cpp  UI.cpp
src/chunk/: ChunkManager.cpp  chunk.cpp  chunk.cppm  chunk_manager.cpp  chunk_manager.cppm  noise.cpp  noise.cppm
src/core/: Camera.cpp  CameraController.cpp  InputManager.cpp  Timer.cpp  Transitions.cpp  aabb.cppm  application.cpp  camera.cpp  camera_controller.cpp  core.cpp  core.cppm  defines.cpp  frame_context.cppm  input_manager.cpp  input_manager.cppm  logger.cppm  raycast.cppm  timer.cpp  transitions.cpp  window_context.cpp  window_context.cppm
src/debug/: debug.cppm
src/game/: Player.cpp  app.cpp  app.cppm  app_state.cppm  game_factories.cppm  game_state.cppm  player.cpp  player.cppm
src/game/ecs/: components.cppm  ecs.cppm  entity.cppm
src/graphics/: Cube.cpp  DebugDrawer.cpp  Texture.cpp  cube.cpp  debug_drawer.cpp  debug_drawer.cppm  shader.cpp  shader.cppm  texture.cpp  texture.cppm
src/graphics/renderer/: framebuffer.cppm  framebuffer_manager.cppm  gl_state.cpp  gl_state.cppm  gpu_buffer.cpp  gpu_buffer.cppm  index_buffer.cppm  shader_storage_buffer.cppm  ssbo.cppm  uniform_buffer.cppm  vertex_buffer.cpp  vertex_buffer.cppm
src/graphics/shaders/: add_global_offsets.comp  buf_reset.comp  chunk.comp  chunk_frag.glsl  chunk_vert.glsl  compute_global_offsets.comp  debug_frag.glsl  debug_vert.glsl  fb_frag.glsl  fb_player_frag.glsl  fb_vert.glsl  indirect_buffer_fill.comp  merged_offsets.comp  prefix_sum.comp  test_frag.glsl  test_vert.glsl  voxel_buffer.comp  write_faces.comp
src/ui/: SystemInterfaceGLFW.cpp  system_interface_glfw.cpp  ui.cpp  ui.cppm
(+24 files in other folders)
